src/objects/Mandate__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Member__c</fullName>
        <description>This objects relates clients with mandates who has right to withdraw money from client account on his behalf.</description>
        <label>Member</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Mandates</relationshipLabel>
        <relationshipName>Mandates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Mandates (Related to)</relationshipLabel>
        <relationshipName>Mandates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <label>Relation</label>
        <picklist>
            <picklistValues>
                <fullName>Aunty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mandate</label>
    <nameField>
        <displayFormat>MAN-{0000000}</displayFormat>
        <label>Mandate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>